# containment-container

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
